# Algorytm_autonomicznego_mapowania_nawigacji

./: README.md
src/kidnapped_robot_finder/: package.xml
src/kidnapped_robot_finder/config/: config.yaml
src/kidnapped_robot_finder/global_localizer/: distance_transform.py  feature_matching.py  find_robot.py  kidnap_solver.py
src/koala_description/: CMakeLists.txt  package.xml
src/koala_description/launch/: load_description.launch.py  rviz.launch.py
src/koala_description/urdf/: IMU.xacro  caster.xacro  colors.xacro  koala_description.xacro  lidar.xacro  macros.xacro  wheel.xacro
src/koala_exploration/: configrviz.rviz  package.xml  setup.cfg  setup.py
src/koala_exploration/behavior_trees/: nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml
src/koala_exploration/koala_exploration/: explorer_node.py
src/koala_exploration/koala_exploration/nodes/: FFD_node.py  WFD_node.py
src/koala_exploration/koala_exploration/utils/: benchmark_detector_node.py  clustering.py  utils_explorer_node.py
src/koala_exploration/launch/: exploration_node_launch.py
src/koala_exploration/params/: explore.yaml  nav2_nodes.json
src/koala_intefaces/: CMakeLists.txt  package.xml
src/koala_intefaces/msg/: Frontiers.msg
src/koala_intefaces/srv/: GlobalLocalization.srv
src/koala_navigation/: CMakeLists.txt  package.xml
src/koala_navigation/launch/: bringup_final_launch.py  generic_launch.py  husarion_launch.py  localization_final_launch.py
src/koala_navigation/maps/Sala/: map.yaml  mapaFinal.data  mapaFinal.pgm
src/koala_navigation/maps/Symulacja/: map.data  map.pgm  map.yaml
src/koala_navigation/maps/Symulacja/Szum/: map.data  map.pgm  map.yaml
src/koala_navigation/params/: nav2_params_final.yaml  nav2_params_mppi.yaml
src/koala_perception/: package.xml  setup.cfg  setup.py
src/koala_perception/launch/: ekf.launch.py
src/koala_perception/params/: ekf.yaml
src/koala_simulation/: CMakeLists.txt  package.xml
src/koala_simulation/launch/: gazebo.house.launch.py
src/koala_slam/: CMakeLists.txt  package.xml
src/koala_slam/launch/: online_sync_launch.py  slam_toolbox_localization.launch.py  slam_toolbox_mapping.launch.py
src/koala_slam/params/: mapper_params_localization.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/koala_teleop/: package.xml  setup.cfg  setup.py
src/koala_teleop/koala_teleop/: cameraPreview.py  test.py  vel_mux.py
src/koala_utils/: package.xml  setup.cfg  setup.py
src/koala_utils/koala_utils/: battery_status.py  chat.py  debug_gui.py  final_inicjalizer.py  heatmapa.py  spin_robot.py
