<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>koala_exploration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="124900594+PanNiewidomy@users.noreply.github.com">jakub</maintainer>
  <license>TODO: License declaration</license>

  <!-- Zależności wykonawcze ROS2 -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>koala_intefaces</depend>
  <depend>nav2_msgs</depend>
  <depend>slam_toolbox</depend>

  <!-- Zależności Pythonowe -->
  <depend>python3-numpy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-pandas</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-psutil</depend>

  <!-- Zależności testowe -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
