<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>koala_teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="124900594+PanNiewidomy@users.noreply.github.com">jakub</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- Zależności ROS 2 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- Zależności Pythona -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygame</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
