<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>koala_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="124900594+PanNiewidomy@users.noreply.github.com">jakub</maintainer>
  <license>TODO: License declaration</license>

  <!-- test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Zależności ROS 2 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>koala_intefaces</depend>

  <!-- Zależności Pythona -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
